--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':VoiceModule')
     implementation project(':react-native-android-text-to-speech')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-vector-icons')
